welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ';' expected but 'return' found.
			} else { gauche() avance() gauche() return false} 
                                                            ^SnakeBuggle:12: error: ';' expected but 'return' found.
		droite() avance() droite() return false
                                           ^